# radd

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  install.sh
.github/: sanad.lock.json
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: config.toml
docs/content/: _index.md
docs/content/developer/: _index.md  architecture.md  audit-artifacts.md  contributing.md  merge-planner-and-executor.md  testing-and-release.md
docs/content/guide/: _index.md  getting-started.md  installation.md  manifests-and-inputs.md  merge-planning.md  scratch-cache-and-staging.md  validation-inspection-and-benchmarking.md
docs/content/reference/: _index.md  artifacts.md  cache.md  cli.md  safety.md
docs/static/: install.sh  style.css
docs/templates/: base.html  index.html  page.html  post.html  section.html
docs/templates/partials/: nav.html
src/: bench.rs  cache.rs  cli.rs  config.rs  executor.rs  hadd.rs  input.rs  inspect.rs  main.rs  planner.rs  staging.rs  telemetry.rs  update.rs  validate.rs
tests/: cli_smoke.rs  real_root.rs
